# spotify-hey-listen

./: .cache  .env  .env.example  .gitignore  .spotify_auth_cache  Dockerfile  README.md  main.py  pyproject.toml  run.sh
cache/: playlist_4Go6LTKodDqQYkqOGC8ZiH.json
ci/: format  lint  ruff-check
heylisten/: __init__.py  config.py  db.py  main.py  notifications.py  playlist_monitor.py  web.py
heylisten/notifications/: __init__.py  discord.py
templates/: discord_config.html  index.html
tests/: test_playlist_monitor.py
