[tool.poetry]
name = "heylisten"
version = "0.1.0"
description = "A service that monitors Spotify playlists for changes"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13, <4"
spotipy = "^2.22.1"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
schedule = "^1.2.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.0"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "B"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
